# sandbox

./: README.md
agda/: Append.agda  braun.agda  list.agda  reason.agda  test.agda
c/: local.c  qoo.c  size.c
coffeescript/: prelude.coffee  test.coffee
cplusplus/: array.cpp  curse.cpp  encoding.cpp  ifstream.cpp  lambda.cpp  list.cpp  operator.cpp  overloading.cpp  signed.cpp  switch.cpp  temp.cpp  time_t.cpp  xd.cpp
cplusplus/cmake/: CMakeLists.txt  cmake_install.cmake  multi_map.cpp  multi_map.pro
cplusplus/cmake/multi_map.app/Contents/: Info.plist
haskell/: AvgTree.hs  Prob.hs  VarArgs.hs  basics.hs  collatz.hs  combos.hs  count.hs  dfa.hs  fib.hs  fib2.hs  flatten.hs  functor.hs  ghci.hs  google.hs  hanoi.hs  hash.hs  hello.hs  ho.hs  left_list.hs  list_comprehension.hs  monad.hs  none.hs  permutation.hs  philosopher.hs  powerset.hs  q1q2.hs  split.hs  square_sum.hs  stm.hs  strictness.hs  talk.hs  test-reader.hs  untitled.hs  vm1.hs  vm2.hs  vm3.hs  vm4.hs  y_com.hs  y_com2.hs
java/: Ambi.java  Const.java  Driver.java  Encoding.java  EnumTest.java  Getch.java  TestVoid.java  YamlSymbol.java
js/: rainbows.html  three.html
livescript/: cube.js  cube.ls  list.ls  maybe.ls  monad.ls  three.html
lua/: array.lua  klass.lua
misc/: install.sh
python/: Benford.py  lib.py  my.py
ruby/: Rakefile  aop.rb  att.rb  bm_method_call.rb  bm_prime.rb  bm_rotate.rb  cat.rb  coroutine.rb  dm-as-time.rb  dm-has-through.rb  echo.rb  facets_test.rb  fork.rb  fork2.rb  godfat-quine.rb  gosu_test.rb  hanoi.rb  macro.rb  monad-list.rb  monvspos.rb  ngct.rb  nn.rb  (+17 more)
(+154 files in other folders)
